# cmr-renamer

./: .gitattributes  .gitignore  CLAUDE.md  README.md  config.ini  main.py  pyproject.toml  watcher.py
.github/: dependabot.yml
.github/workflows/: build_release.yml  dependabot.yml
cmr_renamer/: __init__.py  __main__.py  cli.py  config.py  ocr.py  rename.py  watcher.py
docs/superpowers/plans/: 2026-07-23-bundle-poppler-tesseract.md  2026-07-23-tray-icon-rotation-preprocessing-multibox.md  2026-07-24-calibrator-preview-gui-setup.md  2026-07-24-multi-file-box-calibration.md  2026-07-24-scan-drift-anchor.md
docs/superpowers/specs/: 2026-07-23-bundle-poppler-tesseract-design.md  2026-07-23-tray-icon-rotation-preprocessing-multibox-design.md  2026-07-24-calibrator-drift-preview-design.md  2026-07-24-gui-initial-setup-design.md  2026-07-24-multi-file-box-calibration-design.md  2026-07-24-scan-drift-anchor-design.md
