[project]
name = "cmr-renamer"
version = "1.0.0"
description = "A file watcher and renamer for CMR documents using OCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "pillow",
    "pytesseract",
    "pdf2image",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
