[project]
name = "cmr-renamer"
version = "3.1.0b2"
description = "A file watcher and renamer for CMR documents using OCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "pillow",
    "pytesseract",
    "pdf2image",
    "pystray",
]

[project.scripts]
cmr-renamer = "cmr_renamer.cli:run"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmr_renamer"]
